kube-files/node-app.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: virt-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  strategy: {}
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - image: kubernetes-challenge:1.0.0
        imagePullPolicy: IfNotPresent
        name: hello
        resources: 
          requests:
            cpu: 70m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 124Mi
status: {}
