kube-files/node-app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: virt-dev
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: node-app
  type: LoadBalancer
